Updated Animation Status of the Weekly Program Section and the  upcoming events

--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,13 @@ header{
     background:url(../images/headerBG.png)center/cover no-repeat;
 }
 #slider{
-    max-height: 82vh;
-    overflow: hidden;
+    /* max-height: 82vh;
+    overflow: hidden; */
+}
+.slide-img{
+    height: 82vh;
+    object-fit: cover;
+    object-position: center center;
 }
 #main-col{
    
