--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,7 @@ body {
 header{
     background:url(../images/headerBG.png)center/cover no-repeat;
 }
-#slider{
-    /* max-height: 82vh;
-    overflow: hidden; */
-}
+
 .slide-img{
     height: 82vh;
     object-fit: cover;
@@ -92,3 +89,41 @@ box-shadow: -2px 18px 30px -16px rgba(0,0,0,0.75);
       border-top: none;
       outline: none;
   }
+
+  #quote{
+    min-height: 55vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/g6.jpg) center/cover no-repeat fixed;
+}
+
+.immageBox { 
+	position: relative; 
+	overflow: hidden;
+	
+}
+.textBox {
+	position:absolute;
+	top: 0;
+	top: -82%;
+	width: 100%;
+	height: 100%;
+	background: #500d62;
+    transition: .5s;
+    
+	
+}
+.textBox h1{
+	
+	padding: 5px;
+	font-size: 20px;
+	font-family: "Arial Black", "sans-serif";
+	align-content: center;
+	margin-top: 23%;
+}
+.immageBox:hover .textBox{
+	top: 0;
+}
+.immageBox:hover img{
+	transform: scale(1.2);
+	
+}
