--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 body {
    background-color: #f6dffa; 
     /**/
-	font-size: 1em;
+    font-size: 1em;
+    
 }
 header{
     background:url(../images/headerBG.png)center/cover no-repeat;
@@ -18,7 +19,7 @@ header{
     height: 82vh;
     object-fit: cover;
     object-position: center center;
-}
+} 
 #main-col{
    
 	
@@ -37,7 +38,7 @@ header{
 -moz-box-shadow: -2px 18px 30px -16px rgba(0,0,0,0.75);
 box-shadow: -2px 18px 30px -16px rgba(0,0,0,0.75);
 }
-.grad{  background-image:linear-gradient(to right,#500d62,#018d18); }
+
 
 #upcoming{
     overflow-x: scroll!important;
@@ -145,9 +146,7 @@ box-shadow: -2px 18px 30px -16px rgba(0,0,0,0.75);
     padding: 2em 2em;
     margin-bottom: 1em;
 }
-.w3ls-left {
-    padding: 0;
-}
+
 .bht1 a{
     background: #fa4b2a;
     padding: 0.3em 1.8em;
@@ -181,3 +180,48 @@ box-shadow: -2px 18px 30px -16px rgba(0,0,0,0.75);
     display: inline-block;
     border: 1px solid #d2d1d1;
 }
+/*================ LEADERS' SECTION ============*/
+.leaders-carousel{
+
+}
+.single-leader{
+    background: #fff;
+    border-radius: 100px 0 100px 0;
+}
+.leader-img{
+width: 100px;
+height: 100px;
+display: block;
+overflow: hidden;
+border-radius: 50%;
+margin: 0 auto; 
+}
+.leader-img img{
+    object-fit: cover;
+    object-position: center center;
+}
+.leader-text{
+padding: 0 10px;
+}
+.dash {color:#018d18;}
+.leader-text hr{ border-top: 1px dashed green;
+    width: 85%;
+    margin: 0 auto;
+}
+.owl-dots{
+    text-align: center;
+}
+.owl-dot{
+    display: inline-block;
+    height: 15px !important;
+    width: 15px !important;
+    background-color:green !important;
+    opacity: 0.8;
+    border-radius: 50%;
+    margin: 5px 5px;
+}
+.leader-text h5{margin: 20px 0 -15;
+color: forestgreen;  
+}
+.owl-dot.active{ background-color:black !important; }
+.owl-nav{display: none;}
