--- a/css/mq..css
+++ b/css/mq..css
@@ -5,7 +5,15 @@
 	{
 		#quote h2{
             font-size:10vw;
-        }
+		}
+		.tc-ch {
+			background: #fff;
+			padding: 0.8em 0.8em;
+			margin-bottom: 1em;
+		}
+		.tc-ch h3{
+			font-size: 1.2rem;
+		}
 			
 	}
 	
