Database first commit And Modification of the Blog Page

--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,7 @@ color: #000000;
 }
 #last-row {background-color: #260037;
 }
-#last-row .col-xl-12 #last-row-para { color: #33C722;
+#last-row  #last-row-para { color: #33C722;
 }
 
 /* Back to top button */
