Added Article Category and announcemet table

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -61,7 +61,7 @@ box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.72);
     max-width: 200px;
     background: #500d62;
     color: #fff;
-    transition: all 0.3s;
+    transition: all 0.4s;
    
 }
 #sidebar.active{
@@ -77,7 +77,7 @@ box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.72);
 	display: block;
 }
 #sidebar ul li a:hover {
-    /* color: #7386D5; */
+     color: black; 
     background: #f6dffa;
 }
 
