Added User Login Sessions

--- a/user/css/login.css
+++ b/user/css/login.css
@@ -1,5 +1,5 @@
 body{
-    background: url(../images/slider/2.jpeg)center/cover no-repeat fixed;;
+    background: url(../images/2.jpeg)center/cover no-repeat fixed;;
    
     color: white;
 }
