--- a/user/css/admin.css
+++ b/user/css/admin.css
@@ -10,7 +10,7 @@ body{
     background-color: #500d62!important;
 }
 .tGB{
-    color: #f6dffa;
+    color: #f8f8f8;
    }
 nav {
     -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,0.72);
