Added Ministries Main Section

--- a/user/css/admin.css
+++ b/user/css/admin.css
@@ -1,5 +1,5 @@
 body{
-    background-color:  #f6dffa; 
+    background-color:  #f6dffa; /* THE RGB FROMAT   rgb(246, 223, 250) */
     
 }
 .greenBgDark{background:#009500}
