created the post capability of the user

--- a/user/css/admin.css
+++ b/user/css/admin.css
@@ -5,6 +5,7 @@ body{
 .greenBgDark{background:#009500}
 .greenBgMid{background: #33c722} 
 .greenBgLight{background: #73fb59}
+.mainbg{background-color:  #f6dffa;}
 
 .pBG{
     background-color: #500d62!important;
