--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,9 @@ border-radius: 50%;
 margin: 0 auto; 
 }
 .leader-img img{
-    object-fit: cover;
+    
+    object-fit: scale-down;
+    object-position: 50% 50%;
     object-position: center center;
 }
 .leader-text{
@@ -321,4 +323,5 @@ color: #000000;
 
 .article-input{
     border-radius: 20px;
+    object-fit: scale-down;
 }
